objects/RiskInsightCredential__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>1003-uni-o-en for the Yodlee Product code</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret_Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>RiskInsightCredential</label>
    <pluralLabel>RiskInsightCredentials</pluralLabel>
</CustomObject>